kubernetes/backend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: shopsphere-backend
spec:
  selector:
    type: backend
  ports:
  - port: 5000
    targetPort: 5000
