kubernetes/frontend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    type: frontend
  ports:
  - port: 80
    targetPort: 80
