kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: shopsphere-ingress
  annotations:
    kubernetes.io/ingress.class: "alb"                         # AWS Load Balancer Controller
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
spec:
  rules:
    - http:
        paths:
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: shopsphere-backend
              port:
                number: 5000
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend-service
              port:
                number: 80
